--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -606,12 +606,12 @@ img {
   display: inline;
   float: left;
   padding: 100px 0;
-  width: 100%;
+ /*  width: 100%; */
 }
 #mu-features .mu-features-area {
   display: inline;
   float: left;
-  width: 100%;
+ /*  width: 100%; */
 }
 #mu-features .mu-features-area .mu-features-content {
   display: inline;
